k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 8080       # exposed port
      targetPort: 5000 # container port
